# simple-cargo-toml

./: Cargo.toml  README.md
src/: main.rs
