[package]
name = "simple-cargo-toml"
version = "0.0.3"
authors = ["Collin Peters <collin.peters@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Foo"
repository = "https://github.com/collinpeters/simple-cargo-toml"
readme = "README.md"

[dependencies]
openssl = "=0.10.8"
clap = "=2.27.1"

[build-dependencies]
cc = "1.0.3"

[dev-dependencies]
pretty_assertions = "0.4.0"
